--- a/projetos.html
+++ b/projetos.html
@@ -23,7 +23,7 @@
                 <h2>Meus Projetos:</h2>
                 <h3>tenho alguns repositórios acessáveis no meu Git Hub como: </h3>
 
-                <p class="link-colorido"><a href="https://hallstackstudios.github.io/Projeto-formulario" target="_blank" class="link-jedi">Um projeto para a empresa HallStack</a><p>(Meu repositório onde está meu projeto de uma página de login para a empresa HallStack.)</p></p>
+                <!--<p class="link-colorido"><a href="https://hallstackstudios.github.io/Projeto-formulario" target="_blank" class="link-jedi">Um projeto para a empresa HallStack</a><p>(Meu repositório onde está meu projeto de uma página de login para a empresa HallStack.)</p></p>
 
                 <p class="d-link"><a href="https://github.com/HallStackStudios/HTML-CSS" target="_blank">Meu repositório do meu curso de HTML e CSS</a>(Meu repositório do Curso em Vídeo, onde estou aprendendo HTML e CSS, aqui estão alguns exercícios e desafios de meu curso.)</p>
 
@@ -37,7 +37,7 @@
 
                 <p class="d-link"><a href="https://hallstackstudios.github.io/pratica/JavaScript/pr002/" target="_blank">Um projeto de calculadora</a>(Uma calculadora para praticar as coisas novas que aprendi em meu curso de JavaScript)</p>
 
-                <p id="link-juv"><a href="https://hallstackstudios.github.io/JuventudeNV/" target="_blank" class="link-jedi">Um Site para a Juventude em Aliança</a><p>(Um site para o grupo de adolescentes da igreja Nova Aliança em São Fídelis)</p></p>
+                <p id="link-juv"><a href="https://hallstackstudios.github.io/JuventudeNV/" target="_blank" class="link-jedi">Um Site para a Juventude em Aliança</a><p>(Um site para o grupo de adolescentes da igreja Nova Aliança em São Fídelis)</p></p>-->
             </section>
         </div>
     </div>
